--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
+  "name": "t-shirt-form-builder",
+  "version": "1.0.1",
   "private": true,
   "main": "index.js",
   "scripts": {
